<resources>
    <string name="app_name">知乎日报</string>
    <string name="empty"> </string>
    <string name="title_section1">首页</string>
    <string name="title_section2">主题日报</string>
    <string name="title_section3">我的收藏</string>
    <string name="title_section4">应用推荐</string>
    <string name="title_section5">设置</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_theme">主题</string>
    <string name="writecomment">写评论</string>
    <string name="lookcomment">评论查看</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="action_comment_compose">写点评</string>
    <string name="action_comment_compose_done">发布</string>
    <string name="action_news_comment_default">...</string>
    <string name="action_sharing_compose_done">发布</string>
    <string name="action_user_edit">编辑</string>
    <string name="action_user_save">保存</string>
    <string name="activity_resolver_use_always">Always</string>
    <string name="activity_resolver_use_once">Just once</string>
    <string name="app_version_latest">已是最新版本</string>
    <string name="auth_client_needs_enabling_title">An application requires Google Play Services to be enabled.</string>
    <string name="auth_client_needs_installation_title">An application requires installation of Google Play Services.</string>
    <string name="auth_client_needs_update_title">An application requires an update for Google Play Services.</string>
    <string name="auth_client_play_services_err_notification_msg">Google Play services error</string>
    <string name="auth_client_requested_by_msg">Requested by %1$s</string>
    <string name="auth_client_using_bad_version_title">An application attempted to use a bad version of Google Play Services.</string>
    <string name="back">后退</string>
    <string name="back_button_label">Back</string>
    <string name="big_font">大字号</string>
    <string name="candidates_style">candidates</string>
    <string name="capital_off">OFF</string>
    <string name="capital_on">ON</string>
    <string name="chooseActivity">Choose an action</string>
    <string name="com.crashlytics.android.build_id">9a75d14c-202a-40b3-997f-9171245c64fe</string>
    <string name="comment_compose_hint">深度长评会被优先展示哦</string>
    <string name="comment_copy">复制</string>
    <string name="comment_delete">删除评论</string>
    <string name="comment_like">赞同点评</string>
    <string name="comment_like_cancel">取消赞同点评</string>
    <string name="comment_loading">努力加载中</string>
    <string name="comment_long_comments">%1$s 条长评</string>
    <string name="comment_no_comment">深度长评虚位以待</string>
    <string name="comment_prompt">同时分享到：</string>
    <string name="comment_report">举报</string>
    <string name="comment_report_done">感谢举报。</string>
    <string name="comment_short_comments">%1$s 条短评</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_date_text">The date on the device appears to be incorrect. Please check the date on the device.</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="dark_mode_off">开启日间模式………</string>
    <string name="dark_mode_on">开启夜间模式………</string>
    <string name="day_picker_description">Month grid of days</string>
    <string name="deleted_key">%1$s deleted</string>
    <string name="dialog_app_update_direct_download">直接下载</string>
    <string name="dialog_app_update_googleplay">Google Play</string>
    <string name="dialog_cancel">取消</string>
    <string name="dialog_offline_cancel">稍后再说</string>
    <string name="dialog_offline_message">离线下载会耗费流量，建议在 Wi-Fi 网络下载</string>
    <string name="dialog_offline_ok">继续下载</string>
    <string name="dialog_offline_title">提示</string>
    <string name="dialog_ok">确定</string>
    <string name="done_label">Done</string>
    <string name="drawer_close" />
    <string name="drawer_open" />
    <string name="email_feedback_body">"


技术信息:

%1$s"</string>
    <string name="email_feedback_dialog_title">发送邮件</string>
    <string name="email_feedback_subject">知乎日报安卓客户端反馈</string>
    <string name="email_feedback_to">mua@zhihu.com</string>
    <string name="errcode_cancel">发送取消</string>
    <string name="errcode_deny">发送被拒绝</string>
    <string name="errcode_success">发送成功</string>
    <string name="errcode_unknown">发送返回</string>
    <string name="esdk__err_api_setup">Error intializing Evernote API</string>
    <string name="esdk__err_authentication">Error authenticating to Evernote</string>
    <string name="esdk__err_protocol_version">Incomatible EDAM client protocol version</string>
    <string name="esdk__evernote">Evernote</string>
    <string name="esdk__evernote_login_failed">Evernote Login Failed</string>
    <string name="esdk__evernote_login_successful">Evernote login successful</string>
    <string name="esdk__loading">Loading...</string>
    <string name="forward">前进</string>
    <string name="ga_trackingId">UA-34053832-5</string>
    <string name="hour_picker_description">Hours circular slider</string>
    <string name="item_is_selected">%1$s selected</string>
    <string name="loading">Loading…</string>
    <string name="location_client_powered_by_google">Powered by Google</string>
    <string name="login">使用微博登录</string>
    <string name="login_right">知乎日报不会未经同意通过你的微博账号发布任何信息</string>
    <string name="menu_save">保存</string>
    <string name="minute_picker_description">Minutes circular slider</string>
    <string name="navigation_user_default_name">登录账号</string>
    <string name="news_toolbar_editor_name">%1$s 推荐</string>
    <string name="news_toolbar_theme_name">%1$s</string>
    <string name="next">下一篇</string>
    <string name="next_button_label">Next</string>
    <string name="noApplications">No apps can perform this action.</string>
    <string name="number_picker_decrement_button">Decrease</string>
    <string name="number_picker_increment_button">Increase</string>
    <string name="number_picker_increment_scroll_action">Slide up to increase and down to decrease.</string>
    <string name="number_picker_increment_scroll_mode">%s touch and hold.</string>
    <string name="offline_progress">%1$s %%</string>
    <string name="offline_status">下载中：%1$s %%</string>
    <string name="offline_status1">正在离线最新内容</string>
    <string name="offline_status_done">下载完成</string>
    <string name="offline_status_done1">离线完成</string>
    <string name="offline_status_done2">完成</string>
    <string name="offline_title">离线下载</string>
    <string name="preference_key_app_upgrade_reminder">key_app_upgrade_reminder</string>
    <string name="preference_key_auto_offline_open">key_auto_offline_open</string>
    <string name="preference_key_big_font_mode_open">key_big_font_mode_open</string>
    <string name="preference_key_comment_share_open">key_comment_share_open</string>
    <string name="preference_key_dark_mode_open">key_dark_mode_open</string>
    <string name="preference_key_last_cache_time">key_last_cache_time</string>
    <string name="preference_key_last_offline_time">key_last_offline_time</string>
    <string name="preference_key_no_image_mode_open">key_no_image_mode_open</string>
    <string name="preference_key_push_open">key_push_open</string>
    <string name="preference_key_recommendation_reminder">key_recommendation_reminder</string>
    <string name="preference_key_shake_to_dark_mode_open">key_shake_to_dark_mode_open</string>
    <string name="preferences_app_check">检查更新</string>
    <string name="preferences_auto_offline">自动离线下载</string>
    <string name="preferences_auto_offline_prompt">仅 Wi-Fi 下可用，自动下载最新内容</string>
    <string name="preferences_bit_font_mode">大字号</string>
    <string name="preferences_cache_clear">清除缓存</string>
    <string name="preferences_cache_clear_success">清理成功</string>
    <string name="preferences_category_feedback">反馈</string>
    <string name="preferences_category_general">常规</string>
    <string name="preferences_category_other">其它</string>
    <string name="preferences_comment_share">点评分享到微博</string>
    <string name="preferences_dark_mode">夜间模式</string>
    <string name="preferences_feedback">意见反馈</string>
    <string name="preferences_no_image_mode">无图模式</string>
    <string name="preferences_no_image_mode_prompt">2G/3G 网络下不下载图片</string>
    <string name="preferences_offline">立即离线下载</string>
    <string name="preferences_push">推送消息</string>
    <string name="preferences_shake_to_dark_mode">摇一摇夜间/白天模式</string>
    <string name="preferences_shake_to_dark_mode_prompt">仅首页/文章页可用</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh…</string>
    <string name="pull_to_refresh_refreshing_label">Loading…</string>
    <string name="pull_to_refresh_release_label">Release to refresh…</string>
    <string name="refresh">刷新</string>
    <string name="sina_weibo">新浪微博</string>
    <string name="tencent_weibo">腾讯微博</string>
</resources>